Fix input box being cut off in some browsers

--- a/src/inform_mapper/static/scss/_graph.scss
+++ b/src/inform_mapper/static/scss/_graph.scss
@@ -197,6 +197,7 @@ label {
 #inform-object-floor {
     margin-bottom: 0 !important;
     height: 22px;
+    padding: 0;
 }
 
 #reset-graph, #download-png {
